[gd_scene load_steps=4 format=3 uid="uid://lc58qq610hsg"]

[ext_resource type="Script" path="res://addons/spritesheet_tools/control.gd" id="1_f6q73"]
[ext_resource type="Texture2D" uid="uid://t8a24567l10d" path="res://addons/spritesheet_tools/arrow.png" id="2_57mpp"]
[ext_resource type="Theme" uid="uid://bo76j5lrfjw5i" path="res://addons/spritesheet_tools/control.tres" id="2_w6cme"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6q73")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.357438, 0.344443, 0.344443, 1)

[node name="ModeContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_right = 306.0
offset_bottom = 31.0
size_flags_horizontal = 0
theme = ExtResource("2_w6cme")
theme_override_constants/separation = 15

[node name="ModeLabel" type="Label" parent="ModeContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "Mode:"

[node name="ModeOption" type="OptionButton" parent="ModeContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
selected = 0
item_count = 3
popup/item_0/text = "Pack to spritesheet"
popup/item_1/text = "Crop to cells"
popup/item_1/id = 1
popup/item_2/text = "Split single image"
popup/item_2/id = 2

[node name="PropertyContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 100.0
offset_right = 520.0
offset_bottom = 820.0
theme = ExtResource("2_w6cme")

[node name="FilePath" type="TextEdit" parent="PropertyContainer"]
custom_minimum_size = Vector2(300, 600)
layout_mode = 2
theme = ExtResource("2_w6cme")
placeholder_text = "File Path"
wrap_mode = 1

[node name="FileOperationContainer" type="HBoxContainer" parent="PropertyContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
theme_override_constants/separation = 5
alignment = 1

[node name="SelectFile" type="Button" parent="PropertyContainer/FileOperationContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_w6cme")
text = "Select File"

[node name="ReloadFile" type="Button" parent="PropertyContainer/FileOperationContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_w6cme")
text = "Reload File"

[node name="SizeProperty" type="HBoxContainer" parent="PropertyContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
theme_override_constants/separation = 63

[node name="SizeLabel" type="VBoxContainer" parent="PropertyContainer/SizeProperty"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_w6cme")
theme_override_constants/separation = 10

[node name="X" type="Label" parent="PropertyContainer/SizeProperty/SizeLabel"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "Width:"

[node name="Y" type="Label" parent="PropertyContainer/SizeProperty/SizeLabel"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "Height:"

[node name="SizeValue" type="VBoxContainer" parent="PropertyContainer/SizeProperty"]
layout_mode = 2
theme = ExtResource("2_w6cme")

[node name="X" type="LineEdit" parent="PropertyContainer/SizeProperty/SizeValue"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "2048"
placeholder_text = "2048"
max_length = 6

[node name="Y" type="LineEdit" parent="PropertyContainer/SizeProperty/SizeValue"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "1024"
placeholder_text = "1024"
max_length = 6

[node name="OffsetProperty" type="HBoxContainer" parent="PropertyContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
theme_override_constants/separation = 40

[node name="OffsetLabel" type="VBoxContainer" parent="PropertyContainer/OffsetProperty"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_w6cme")
theme_override_constants/separation = 10

[node name="X" type="Label" parent="PropertyContainer/OffsetProperty/OffsetLabel"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "Offset X:"

[node name="Y" type="Label" parent="PropertyContainer/OffsetProperty/OffsetLabel"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "Offset Y:"

[node name="OffestValue" type="VBoxContainer" parent="PropertyContainer/OffsetProperty"]
layout_mode = 2
theme = ExtResource("2_w6cme")

[node name="X" type="LineEdit" parent="PropertyContainer/OffsetProperty/OffestValue"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "0"
placeholder_text = "0"
max_length = 6

[node name="Y" type="LineEdit" parent="PropertyContainer/OffsetProperty/OffestValue"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "0"
placeholder_text = "0"
max_length = 6

[node name="SeparationProperty" type="HBoxContainer" parent="PropertyContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
theme_override_constants/separation = 20

[node name="SeparationLabel" type="VBoxContainer" parent="PropertyContainer/SeparationProperty"]
layout_mode = 2
theme = ExtResource("2_w6cme")
theme_override_constants/separation = 10
alignment = 1

[node name="X" type="Label" parent="PropertyContainer/SeparationProperty/SeparationLabel"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "Margin X:"

[node name="Y" type="Label" parent="PropertyContainer/SeparationProperty/SeparationLabel"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "Margin Y:"

[node name="SeparationValue" type="VBoxContainer" parent="PropertyContainer/SeparationProperty"]
layout_mode = 2
theme = ExtResource("2_w6cme")

[node name="X" type="LineEdit" parent="PropertyContainer/SeparationProperty/SeparationValue"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "1"
placeholder_text = "1"
max_length = 6

[node name="Y" type="LineEdit" parent="PropertyContainer/SeparationProperty/SeparationValue"]
custom_minimum_size = Vector2(250, 35)
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "1"
placeholder_text = "1"
max_length = 6

[node name="Generate" type="Button" parent="PropertyContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "Generate"

[node name="SavePath" type="LineEdit" parent="PropertyContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "user://export/"
placeholder_text = "Save Path"

[node name="SaveToFile" type="Button" parent="PropertyContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
text = "SaveToFile"

[node name="SelectFileDialog" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 1
size = Vector2i(1600, 800)
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.jpg", "*.jpeg", "*.png")

[node name="Preview" type="Control" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2048.0
offset_bottom = -200.0
grow_horizontal = 0
grow_vertical = 2

[node name="PreviewViewportContainer" type="SubViewportContainer" parent="Preview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2

[node name="PreviewViewport" type="SubViewport" parent="Preview/PreviewViewportContainer"]
handle_input_locally = false
size = Vector2i(2048, 1200)
render_target_update_mode = 4

[node name="SelectColorRect" type="ColorRect" parent="Preview/PreviewViewportContainer"]
z_index = 10
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
color = Color(1, 1, 1, 0.784314)

[node name="RectSize" type="Label" parent="Preview/PreviewViewportContainer/SelectColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.5
offset_top = -57.0
offset_right = 41.5
offset_bottom = -2.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "0 x 0"

[node name="TopBorder" type="ColorRect" parent="Preview"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -2048.0
offset_bottom = 2.0
grow_horizontal = 0

[node name="BottomBorder" type="ColorRect" parent="Preview"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2048.0
offset_top = 2.0
offset_bottom = 4.0
grow_horizontal = 0
grow_vertical = 0

[node name="LeftBorder" type="ColorRect" parent="Preview"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -600.0
offset_right = 2.0
offset_bottom = 604.0
grow_vertical = 2

[node name="RightBorder" type="ColorRect" parent="Preview"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -600.0
offset_bottom = 604.0
grow_horizontal = 0
grow_vertical = 2

[node name="GridContainer" type="Control" parent="Preview"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ErrorDialog" type="AcceptDialog" parent="."]
title = "Error"
initial_position = 1
size = Vector2i(1000, 800)
dialog_text = "Error Message"
dialog_autowrap = true

[node name="PageSwitchContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 1487.0
offset_top = 1291.0
offset_right = 2487.0
offset_bottom = 1547.0
scale = Vector2(0.3, 0.3)
theme = ExtResource("2_w6cme")
alignment = 1

[node name="Left" type="TextureButton" parent="PageSwitchContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
texture_normal = ExtResource("2_57mpp")
flip_h = true

[node name="Number" type="LineEdit" parent="PageSwitchContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("2_w6cme")
theme_override_font_sizes/font_size = 120
text = "1/1"
alignment = 1
editable = false
expand_to_text_length = true

[node name="Right" type="TextureButton" parent="PageSwitchContainer"]
layout_mode = 2
theme = ExtResource("2_w6cme")
texture_normal = ExtResource("2_57mpp")

[node name="SaveSpritesheetDialog" type="PopupPanel" parent="."]
title = "Save Image"
initial_position = 2
size = Vector2i(1800, 1100)

[node name="SubViewportContainer" type="SubViewportContainer" parent="SaveSpritesheetDialog"]
offset_left = 4.0
offset_top = 4.0
offset_right = 1796.0
offset_bottom = 1096.0

[node name="SubViewport" type="SubViewport" parent="SaveSpritesheetDialog/SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 0

[node name="Test1" type="Button" parent="."]
top_level = true
layout_mode = 2
anchor_left = 0.984
anchor_top = 1.091
anchor_right = 0.984
anchor_bottom = 1.091
offset_left = -187.4
offset_top = -314.4
offset_right = -0.400391
offset_bottom = -256.4
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_w6cme")
text = "Test1"

[node name="Test2" type="Button" parent="."]
top_level = true
layout_mode = 2
anchor_left = 0.984
anchor_top = 1.091
anchor_right = 0.984
anchor_bottom = 1.091
offset_left = -187.4
offset_top = -251.4
offset_right = -0.400391
offset_bottom = -193.4
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_w6cme")
text = "Test2"

[node name="Test3" type="Button" parent="."]
top_level = true
layout_mode = 2
anchor_left = 0.984
anchor_top = 1.091
anchor_right = 0.984
anchor_bottom = 1.091
offset_left = -187.4
offset_top = -188.4
offset_right = -0.400391
offset_bottom = -130.4
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_w6cme")
text = "Test3"

[node name="ProgressPopupPanel" type="PopupPanel" parent="."]
title = "Progress"
initial_position = 2
size = Vector2i(1200, 60)

[node name="ProgressBar" type="ProgressBar" parent="ProgressPopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 1196.0
offset_bottom = 56.0
max_value = 1.0
step = 0.1
value = 0.3

[connection signal="item_selected" from="ModeContainer/ModeOption" to="." method="_on_mode_option_item_selected"]
[connection signal="pressed" from="PropertyContainer/FileOperationContainer/SelectFile" to="." method="_on_select_file_pressed"]
[connection signal="pressed" from="PropertyContainer/FileOperationContainer/ReloadFile" to="." method="_on_reload_file_pressed"]
[connection signal="pressed" from="PropertyContainer/Generate" to="." method="_on_generate_pressed"]
[connection signal="pressed" from="PropertyContainer/SaveToFile" to="." method="_on_save_to_file_pressed"]
[connection signal="canceled" from="SelectFileDialog" to="." method="_on_select_file_dialog_canceled"]
[connection signal="confirmed" from="SelectFileDialog" to="." method="_on_select_file_dialog_confirmed"]
[connection signal="file_selected" from="SelectFileDialog" to="." method="_on_select_file_dialog_file_selected"]
[connection signal="files_selected" from="SelectFileDialog" to="." method="_on_select_file_dialog_files_selected"]
[connection signal="pressed" from="PageSwitchContainer/Left" to="." method="_on_page_left_pressed"]
[connection signal="pressed" from="PageSwitchContainer/Right" to="." method="_on_page_right_pressed"]
[connection signal="pressed" from="Test1" to="." method="_on_test_1_pressed"]
[connection signal="pressed" from="Test2" to="." method="_on_test_2_pressed"]
[connection signal="pressed" from="Test3" to="." method="_on_test_3_pressed"]
